--- a/index.html
+++ b/index.html
@@ -385,20 +385,38 @@
     </section>
     <!-- /Resume Section -->
 
-    <!-- Portfolio Section -->
-<section id="portfolio" class="portfolio section">
+    <section id="portfolio" class="portfolio section">
   <div class="container section-title" data-aos="fade-up">
     <h2>Portfolio</h2>
     <p>Some of my recent web development projects</p>
   </div>
+
   <div class="container" data-aos="fade-up" data-aos-delay="100">
     <div class="row gy-4">
-      
+
       <!-- Project 1 -->
       <div class="col-lg-4 col-md-6">
         <div class="text-center">
           <h4>E-Commerce Platform</h4>
-          <img src="https://images.unsplash.com/photo-1556742049-0cfed4f6a45d?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" class="img-fluid rounded" alt="E-Commerce" style="max-height: 200px; object-fit: cover;">
+
+          <!-- Project Image -->
+          <img src="https://images.unsplash.com/photo-1556742049-0cfed4f6a45d?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" 
+               class="img-fluid rounded" 
+               alt="E-Commerce" 
+               style="max-height: 200px; object-fit: cover;">
+
+          <!-- Video -->
+          <div class="project-video mt-3">
+            <iframe 
+              src="https://www.youtube.com/embed/VIDEO_ID_1"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen>
+            </iframe>
+          </div>
+
+          <!-- Buttons -->
           <div class="mt-3">
             <a href="#" class="btn btn-primary btn-sm me-2" target="_blank">
               <i class="bi bi-code-slash"></i> View Source Code
@@ -414,7 +432,22 @@
       <div class="col-lg-4 col-md-6">
         <div class="text-center">
           <h4>Company Portfolio Website</h4>
-          <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" class="img-fluid rounded" alt="Portfolio" style="max-height: 200px; object-fit: cover;">
+
+          <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" 
+               class="img-fluid rounded" 
+               alt="Portfolio" 
+               style="max-height: 200px; object-fit: cover;">
+
+          <div class="project-video mt-3">
+            <iframe 
+              src="https://www.youtube.com/embed/VIDEO_ID_2"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen>
+            </iframe>
+          </div>
+
           <div class="mt-3">
             <a href="#" class="btn btn-primary btn-sm me-2" target="_blank">
               <i class="bi bi-code-slash"></i> View Source Code
@@ -430,7 +463,22 @@
       <div class="col-lg-4 col-md-6">
         <div class="text-center">
           <h4>Dashboard Admin Panel</h4>
-          <img src="https://images.unsplash.com/photo-1558655146-9f40138ed1cb?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" class="img-fluid rounded" alt="Dashboard" style="max-height: 200px; object-fit: cover;">
+
+          <img src="https://images.unsplash.com/photo-1558655146-9f40138ed1cb?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" 
+               class="img-fluid rounded" 
+               alt="Dashboard" 
+               style="max-height: 200px; object-fit: cover;">
+
+          <div class="project-video mt-3">
+            <iframe 
+              src="https://www.youtube.com/embed/VIDEO_ID_3"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen>
+            </iframe>
+          </div>
+
           <div class="mt-3">
             <a href="#" class="btn btn-primary btn-sm me-2" target="_blank">
               <i class="bi bi-code-slash"></i> View Source Code
@@ -442,12 +490,10 @@
         </div>
       </div>
 
-      <!-- يمكنك إضافة المزيد من المشاريع بنفس الشكل -->
-
     </div>
   </div>
 </section>
-<!-- /Portfolio Section -->
+
 
 
     <!-- Services Section -->
