--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
         <div class="text-center">
           <h4>Dashboard Admin Panel</h4>
 
-          <img src="https://images.unsplash.com/photo-1558655146-9f40138ed1cb?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" 
+          <img src="https://images.pexels.com/photos/95916/pexels-photo-95916.jpeg" 
                class="img-fluid rounded" 
                alt="Dashboard" 
                style="max-height: 200px; object-fit: cover;">
