--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
           <!-- Video -->
           <div class="project-video mt-3">
             <iframe 
-              src="https://www.youtube.com/embed/VIDEO_ID_1"
+              src="https://www.youtube.com/watch?v=TYo5atJhEKE"
               title="YouTube video player"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -440,7 +440,7 @@
 
           <div class="project-video mt-3">
             <iframe 
-              src="https://www.youtube.com/embed/VIDEO_ID_2"
+              src="https://www.youtube.com/watch?v=xfciwt-QDck"
               title="YouTube video player"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -471,7 +471,7 @@
 
           <div class="project-video mt-3">
             <iframe 
-              src="https://www.youtube.com/embed/VIDEO_ID_3"
+              src="https://www.youtube.com/watch?v=8uU7qqh8MDI"
               title="YouTube video player"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
