--- a/index.html
+++ b/index.html
@@ -380,41 +380,37 @@
     </section>
     <!-- /Resume Section -->
 
-    <section id="portfolio" class="portfolio section">
+<section id="portfolio" class="portfolio section">
   <div class="container section-title" data-aos="fade-up">
     <h2>Portfolio</h2>
-    <p>Some of my recent web development projects</p>
+    <p>Here is a selection of my most recent web development work, each crafted with modern tools, clean structure, and optimized performance.</p>
   </div>
 
   <div class="container" data-aos="fade-up" data-aos-delay="100">
     <div class="row gy-4">
 
+      <!-- PROJECT TEMPLATE (copy for others) -->
       <!-- Project 1 -->
       <div class="col-lg-4 col-md-6">
-        <div class="text-center">
-          <h4>E-Commerce Platform</h4>
+        <div class="portfolio-item text-center p-3 shadow-sm rounded">
+          <h4 class="mb-3">E-Commerce Platform</h4>
 
-          <!-- Project Image -->
-          <img src="https://images.unsplash.com/photo-1556742049-0cfed4f6a45d?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" 
-               class="img-fluid rounded" 
-               alt="E-Commerce" 
+          <img src="https://images.unsplash.com/photo-1556742049-0cfed4f6a45d?auto=format&fit=crop&w=400&q=80"
+               class="img-fluid rounded"
+               alt="E-Commerce"
                style="max-height: 200px; object-fit: cover;">
 
-          <!-- Video -->
-          <div class="project-video mt-3">
-            <iframe 
-              src="https://www.youtube.com/watch?v=TYo5atJhEKE"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen>
-            </iframe>
+          <p class="mt-3 text-muted">A complete online store featuring product management, secure checkout, and responsive UI/UX design.</p>
+
+          <div class="tech-icons mb-3">
+            <i class="bi bi-bootstrap fs-4 me-2" title="Bootstrap"></i>
+            <i class="bi bi-filetype-js fs-4 me-2" title="JavaScript"></i>
+            <i class="bi bi-database fs-4" title="Database"></i>
           </div>
 
-          <!-- Buttons -->
-          <div class="mt-3">
+          <div>
             <a href="#" class="btn btn-primary btn-sm me-2" target="_blank">
-              <i class="bi bi-code-slash"></i> View Source Code
+              <i class="bi bi-code-slash"></i> Source Code
             </a>
             <a href="#" class="btn btn-success btn-sm" target="_blank">
               <i class="bi bi-eye"></i> Live Demo
@@ -425,27 +421,25 @@
 
       <!-- Project 2 -->
       <div class="col-lg-4 col-md-6">
-        <div class="text-center">
-          <h4>Company Portfolio Website</h4>
+        <div class="portfolio-item text-center p-3 shadow-sm rounded">
+          <h4 class="mb-3">Company Portfolio Website</h4>
 
-          <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" 
-               class="img-fluid rounded" 
-               alt="Portfolio" 
+          <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?auto=format&fit=crop&w=400&q=80"
+               class="img-fluid rounded"
+               alt="Company Portfolio"
                style="max-height: 200px; object-fit: cover;">
 
-          <div class="project-video mt-3">
-            <iframe 
-              src="https://www.youtube.com/watch?v=xfciwt-QDck"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen>
-            </iframe>
+          <p class="mt-3 text-muted">A sleek corporate profile showcasing services, achievements, and a fully interactive contact platform.</p>
+
+          <div class="tech-icons mb-3">
+            <i class="bi bi-html5 fs-4 me-2"></i>
+            <i class="bi bi-css3 fs-4 me-2"></i>
+            <i class="bi bi-bootstrap fs-4"></i>
           </div>
 
-          <div class="mt-3">
+          <div>
             <a href="#" class="btn btn-primary btn-sm me-2" target="_blank">
-              <i class="bi bi-code-slash"></i> View Source Code
+              <i class="bi bi-code-slash"></i> Source Code
             </a>
             <a href="#" class="btn btn-success btn-sm" target="_blank">
               <i class="bi bi-eye"></i> Live Demo
@@ -456,27 +450,112 @@
 
       <!-- Project 3 -->
       <div class="col-lg-4 col-md-6">
-        <div class="text-center">
-          <h4>Dashboard Admin Panel</h4>
+        <div class="portfolio-item text-center p-3 shadow-sm rounded">
+          <h4 class="mb-3">Dashboard Admin Panel</h4>
 
-          <img src="https://images.pexels.com/photos/95916/pexels-photo-95916.jpeg" 
-               class="img-fluid rounded" 
-               alt="Dashboard" 
+          <img src="https://images.pexels.com/photos/95916/pexels-photo-95916.jpeg"
+               class="img-fluid rounded"
+               alt="Dashboard"
                style="max-height: 200px; object-fit: cover;">
 
-          <div class="project-video mt-3">
-            <iframe 
-              src="https://www.youtube.com/watch?v=8uU7qqh8MDI"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen>
-            </iframe>
+          <p class="mt-3 text-muted">A dynamic management dashboard with charts, analytics, and user controls for business operations.</p>
+
+          <div class="tech-icons mb-3">
+            <i class="bi bi-filetype-js fs-4 me-2"></i>
+            <i class="bi bi-bar-chart fs-4 me-2"></i>
+            <i class="bi bi-layout-text-window fs-4"></i>
           </div>
 
-          <div class="mt-3">
+          <div>
             <a href="#" class="btn btn-primary btn-sm me-2" target="_blank">
-              <i class="bi bi-code-slash"></i> View Source Code
+              <i class="bi bi-code-slash"></i> Source Code
+            </a>
+            <a href="#" class="btn btn-success btn-sm" target="_blank">
+              <i class="bi bi-eye"></i> Live Demo
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Project 4 -->
+      <div class="col-lg-4 col-md-6">
+        <div class="portfolio-item text-center p-3 shadow-sm rounded">
+          <h4 class="mb-3">Real Estate Listing System</h4>
+
+          <img src="https://images.unsplash.com/photo-1501183638710-841dd1904471?auto=format&fit=crop&w=400&q=80"
+               class="img-fluid rounded"
+               alt="Real Estate"
+               style="max-height: 200px; object-fit: cover;">
+
+          <p class="mt-3 text-muted">A platform that allows users to explore properties, filter results, and view detailed property insights.</p>
+
+          <div class="tech-icons mb-3">
+            <i class="bi bi-react fs-4 me-2"></i>
+            <i class="bi bi-geo-alt fs-4 me-2"></i>
+            <i class="bi bi-cloud-arrow-down fs-4"></i>
+          </div>
+
+          <div>
+            <a href="#" class="btn btn-primary btn-sm me-2" target="_blank">
+              <i class="bi bi-code-slash"></i> Source Code
+            </a>
+            <a href="#" class="btn btn-success btn-sm" target="_blank">
+              <i class="bi bi-eye"></i> Live Demo
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Project 5 -->
+      <div class="col-lg-4 col-md-6">
+        <div class="portfolio-item text-center p-3 shadow-sm rounded">
+          <h4 class="mb-3">Restaurant Ordering System</h4>
+
+          <img src="https://images.unsplash.com/photo-1555992336-cbfdb0f4a3cd?auto=format&fit=crop&w=400&q=80"
+               class="img-fluid rounded"
+               alt="Restaurant System"
+               style="max-height: 200px; object-fit: cover;">
+
+          <p class="mt-3 text-muted">An online food ordering system with menu browsing, order tracking, and secure payment options.</p>
+
+          <div class="tech-icons mb-3">
+            <i class="bi bi-laravel fs-4 me-2"></i>
+            <i class="bi bi-database fs-4 me-2"></i>
+            <i class="bi bi-cart4 fs-4"></i>
+          </div>
+
+          <div>
+            <a href="#" class="btn btn-primary btn-sm me-2" target="_blank">
+              <i class="bi bi-code-slash"></i> Source Code
+            </a>
+            <a href="#" class="btn btn-success btn-sm" target="_blank">
+              <i class="bi bi-eye"></i> Live Demo
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Project 6 -->
+      <div class="col-lg-4 col-md-6">
+        <div class="portfolio-item text-center p-3 shadow-sm rounded">
+          <h4 class="mb-3">AI Chat Assistant</h4>
+
+          <img src="https://images.unsplash.com/photo-1600267175161-cf6a1b5f1a7b?auto=format&fit=crop&w=400&q=80"
+               class="img-fluid rounded"
+               alt="AI Chatbot"
+               style="max-height: 200px; object-fit: cover;">
+
+          <p class="mt-3 text-muted">A smart chatbot powered by AI for answering customer inquiries and automating support tasks.</p>
+
+          <div class="tech-icons mb-3">
+            <i class="bi bi-lightning fs-4 me-2" title="AI"></i>
+            <i class="bi bi-node-plus fs-4 me-2" title="Node.js"></i>
+            <i class="bi bi-chat-dots fs-4" title="Chat UI"></i>
+          </div>
+
+          <div>
+            <a href="#" class="btn btn-primary btn-sm me-2" target="_blank">
+              <i class="bi bi-code-slash"></i> Source Code
             </a>
             <a href="#" class="btn btn-success btn-sm" target="_blank">
               <i class="bi bi-eye"></i> Live Demo
@@ -488,7 +567,6 @@
     </div>
   </div>
 </section>
-
 
 
     <!-- Services Section -->
