--- a/index.html
+++ b/index.html
@@ -383,53 +383,40 @@
 <section id="portfolio" class="portfolio section">
   <div class="container section-title" data-aos="fade-up">
     <h2>Portfolio</h2>
-    <p>Here is a selection of my most recent web development work, each crafted with modern tools, clean structure, and optimized performance.</p>
+    <p>Here is a selection of my most recent web development work, built with clean structure and optimized performance.</p>
   </div>
 
   <div class="container" data-aos="fade-up" data-aos-delay="100">
     <div class="row gy-4">
 
-      <!-- PROJECT TEMPLATE (copy for others) -->
       <!-- Project 1 -->
-      <div class="col-lg-4 col-md-6">
-        <div class="portfolio-item text-center p-3 shadow-sm rounded">
+      <div class="col-lg-4 col-md-6 d-flex">
+        <div class="portfolio-item text-center p-3 shadow-sm rounded w-100 h-100">
           <h4 class="mb-3">E-Commerce Platform</h4>
-
-          <img src="https://images.unsplash.com/photo-1556742049-0cfed4f6a45d?auto=format&fit=crop&w=400&q=80"
-               class="img-fluid rounded"
-               alt="E-Commerce"
-               style="max-height: 200px; object-fit: cover;">
-
+          <img src="https://images.unsplash.com/photo-1556742049-0cfed4f6a45d?auto=format&fit=crop&w=600&q=80"
+               class="img-fluid rounded project-img" alt="E-Commerce">
           <p class="mt-3 text-muted">A complete online store featuring product management, secure checkout, and responsive UI/UX design.</p>
 
           <div class="tech-icons mb-3">
-            <i class="bi bi-bootstrap fs-4 me-2" title="Bootstrap"></i>
-            <i class="bi bi-filetype-js fs-4 me-2" title="JavaScript"></i>
-            <i class="bi bi-database fs-4" title="Database"></i>
+            <i class="bi bi-bootstrap fs-4 me-2"></i>
+            <i class="bi bi-filetype-js fs-4 me-2"></i>
+            <i class="bi bi-database fs-4"></i>
           </div>
 
           <div>
-            <a href="#" class="btn btn-primary btn-sm me-2" target="_blank">
-              <i class="bi bi-code-slash"></i> Source Code
-            </a>
-            <a href="#" class="btn btn-success btn-sm" target="_blank">
-              <i class="bi bi-eye"></i> Live Demo
-            </a>
+            <a href="#" class="btn btn-primary btn-sm me-2"><i class="bi bi-code-slash"></i> Source Code</a>
+            <a href="#" class="btn btn-success btn-sm"><i class="bi bi-eye"></i> Live Demo</a>
           </div>
         </div>
       </div>
 
       <!-- Project 2 -->
-      <div class="col-lg-4 col-md-6">
-        <div class="portfolio-item text-center p-3 shadow-sm rounded">
+      <div class="col-lg-4 col-md-6 d-flex">
+        <div class="portfolio-item text-center p-3 shadow-sm rounded w-100 h-100">
           <h4 class="mb-3">Company Portfolio Website</h4>
-
-          <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?auto=format&fit=crop&w=400&q=80"
-               class="img-fluid rounded"
-               alt="Company Portfolio"
-               style="max-height: 200px; object-fit: cover;">
-
-          <p class="mt-3 text-muted">A sleek corporate profile showcasing services, achievements, and a fully interactive contact platform.</p>
+          <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?auto=format&fit=crop&w=600&q=80"
+               class="img-fluid rounded project-img" alt="Company Portfolio">
+          <p class="mt-3 text-muted">A sleek corporate profile showcasing services, achievements, and interactive contact platform.</p>
 
           <div class="tech-icons mb-3">
             <i class="bi bi-html5 fs-4 me-2"></i>
@@ -438,27 +425,19 @@
           </div>
 
           <div>
-            <a href="#" class="btn btn-primary btn-sm me-2" target="_blank">
-              <i class="bi bi-code-slash"></i> Source Code
-            </a>
-            <a href="#" class="btn btn-success btn-sm" target="_blank">
-              <i class="bi bi-eye"></i> Live Demo
-            </a>
+            <a href="#" class="btn btn-primary btn-sm me-2"><i class="bi bi-code-slash"></i> Source Code</a>
+            <a href="#" class="btn btn-success btn-sm"><i class="bi bi-eye"></i> Live Demo</a>
           </div>
         </div>
       </div>
 
       <!-- Project 3 -->
-      <div class="col-lg-4 col-md-6">
-        <div class="portfolio-item text-center p-3 shadow-sm rounded">
+      <div class="col-lg-4 col-md-6 d-flex">
+        <div class="portfolio-item text-center p-3 shadow-sm rounded w-100 h-100">
           <h4 class="mb-3">Dashboard Admin Panel</h4>
-
           <img src="https://images.pexels.com/photos/95916/pexels-photo-95916.jpeg"
-               class="img-fluid rounded"
-               alt="Dashboard"
-               style="max-height: 200px; object-fit: cover;">
-
-          <p class="mt-3 text-muted">A dynamic management dashboard with charts, analytics, and user controls for business operations.</p>
+               class="img-fluid rounded project-img" alt="Dashboard">
+          <p class="mt-3 text-muted">A dynamic management dashboard with analytics, charts, and user control features.</p>
 
           <div class="tech-icons mb-3">
             <i class="bi bi-filetype-js fs-4 me-2"></i>
@@ -467,27 +446,19 @@
           </div>
 
           <div>
-            <a href="#" class="btn btn-primary btn-sm me-2" target="_blank">
-              <i class="bi bi-code-slash"></i> Source Code
-            </a>
-            <a href="#" class="btn btn-success btn-sm" target="_blank">
-              <i class="bi bi-eye"></i> Live Demo
-            </a>
+            <a href="#" class="btn btn-primary btn-sm me-2"><i class="bi bi-code-slash"></i> Source Code</a>
+            <a href="#" class="btn btn-success btn-sm"><i class="bi bi-eye"></i> Live Demo</a>
           </div>
         </div>
       </div>
 
       <!-- Project 4 -->
-      <div class="col-lg-4 col-md-6">
-        <div class="portfolio-item text-center p-3 shadow-sm rounded">
+      <div class="col-lg-4 col-md-6 d-flex">
+        <div class="portfolio-item text-center p-3 shadow-sm rounded w-100 h-100">
           <h4 class="mb-3">Real Estate Listing System</h4>
-
-          <img src="https://images.unsplash.com/photo-1501183638710-841dd1904471?auto=format&fit=crop&w=400&q=80"
-               class="img-fluid rounded"
-               alt="Real Estate"
-               style="max-height: 200px; object-fit: cover;">
-
-          <p class="mt-3 text-muted">A platform that allows users to explore properties, filter results, and view detailed property insights.</p>
+          <img src="https://images.unsplash.com/photo-1501183638710-841dd1904471?auto=format&fit=crop&w=600&q=80"
+               class="img-fluid rounded project-img" alt="Real Estate">
+          <p class="mt-3 text-muted">A platform for exploring properties, filtering results, and viewing property insights.</p>
 
           <div class="tech-icons mb-3">
             <i class="bi bi-react fs-4 me-2"></i>
@@ -496,27 +467,19 @@
           </div>
 
           <div>
-            <a href="#" class="btn btn-primary btn-sm me-2" target="_blank">
-              <i class="bi bi-code-slash"></i> Source Code
-            </a>
-            <a href="#" class="btn btn-success btn-sm" target="_blank">
-              <i class="bi bi-eye"></i> Live Demo
-            </a>
+            <a href="#" class="btn btn-primary btn-sm me-2"><i class="bi bi-code-slash"></i> Source Code</a>
+            <a href="#" class="btn btn-success btn-sm"><i class="bi bi-eye"></i> Live Demo</a>
           </div>
         </div>
       </div>
 
-      <!-- Project 5 -->
-      <div class="col-lg-4 col-md-6">
-        <div class="portfolio-item text-center p-3 shadow-sm rounded">
+      <!-- Project 5  -->
+      <div class="col-lg-4 col-md-6 d-flex">
+        <div class="portfolio-item text-center p-3 shadow-sm rounded w-100 h-100">
           <h4 class="mb-3">Restaurant Ordering System</h4>
-
-          <img src="https://images.unsplash.com/photo-1555992336-cbfdb0f4a3cd?auto=format&fit=crop&w=400&q=80"
-               class="img-fluid rounded"
-               alt="Restaurant System"
-               style="max-height: 200px; object-fit: cover;">
-
-          <p class="mt-3 text-muted">An online food ordering system with menu browsing, order tracking, and secure payment options.</p>
+          <img src="https://images.unsplash.com/photo-1551218808-94e220e084d2?auto=format&fit=crop&w=600&q=80"
+               class="img-fluid rounded project-img" alt="Restaurant">
+          <p class="mt-3 text-muted">An online food ordering system with menu browsing and secure payments.</p>
 
           <div class="tech-icons mb-3">
             <i class="bi bi-laravel fs-4 me-2"></i>
@@ -525,41 +488,29 @@
           </div>
 
           <div>
-            <a href="#" class="btn btn-primary btn-sm me-2" target="_blank">
-              <i class="bi bi-code-slash"></i> Source Code
-            </a>
-            <a href="#" class="btn btn-success btn-sm" target="_blank">
-              <i class="bi bi-eye"></i> Live Demo
-            </a>
+            <a href="#" class="btn btn-primary btn-sm me-2"><i class="bi bi-code-slash"></i> Source Code</a>
+            <a href="#" class="btn btn-success btn-sm"><i class="bi bi-eye"></i> Live Demo</a>
           </div>
         </div>
       </div>
 
-      <!-- Project 6 -->
-      <div class="col-lg-4 col-md-6">
-        <div class="portfolio-item text-center p-3 shadow-sm rounded">
+      <!-- Project 6  -->
+      <div class="col-lg-4 col-md-6 d-flex">
+        <div class="portfolio-item text-center p-3 shadow-sm rounded w-100 h-100">
           <h4 class="mb-3">AI Chat Assistant</h4>
-
-          <img src="https://images.unsplash.com/photo-1600267175161-cf6a1b5f1a7b?auto=format&fit=crop&w=400&q=80"
-               class="img-fluid rounded"
-               alt="AI Chatbot"
-               style="max-height: 200px; object-fit: cover;">
-
-          <p class="mt-3 text-muted">A smart chatbot powered by AI for answering customer inquiries and automating support tasks.</p>
+          <img src="https://images.pexels.com/photos/30530418/pexels-photo-30530418.jpeg"
+               class="img-fluid rounded project-img" alt="AI Assistant">
+          <p class="mt-3 text-muted">A smart chatbot powered by AI to answer customer inquiries automatically.</p>
 
           <div class="tech-icons mb-3">
-            <i class="bi bi-lightning fs-4 me-2" title="AI"></i>
-            <i class="bi bi-node-plus fs-4 me-2" title="Node.js"></i>
-            <i class="bi bi-chat-dots fs-4" title="Chat UI"></i>
+            <i class="bi bi-lightning fs-4 me-2"></i>
+            <i class="bi bi-node-plus fs-4 me-2"></i>
+            <i class="bi bi-chat-dots fs-4"></i>
           </div>
 
           <div>
-            <a href="#" class="btn btn-primary btn-sm me-2" target="_blank">
-              <i class="bi bi-code-slash"></i> Source Code
-            </a>
-            <a href="#" class="btn btn-success btn-sm" target="_blank">
-              <i class="bi bi-eye"></i> Live Demo
-            </a>
+            <a href="#" class="btn btn-primary btn-sm me-2"><i class="bi bi-code-slash"></i> Source Code</a>
+            <a href="#" class="btn btn-success btn-sm"><i class="bi bi-eye"></i> Live Demo</a>
           </div>
         </div>
       </div>
@@ -567,7 +518,6 @@
     </div>
   </div>
 </section>
-
 
     <!-- Services Section -->
     <section id="services" class="services section">
