--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
@@ -389,128 +390,142 @@
   <div class="container" data-aos="fade-up" data-aos-delay="100">
     <div class="row gy-4">
 
+      <!-- Project Template -->
       <!-- Project 1 -->
       <div class="col-lg-4 col-md-6 d-flex">
-        <div class="portfolio-item text-center p-3 shadow-sm rounded w-100 h-100">
-          <h4 class="mb-3">E-Commerce Platform</h4>
+        <div class="portfolio-item text-center p-3 shadow-sm rounded w-100">
+          <h4 class="mb-3 text-white">E-Commerce Platform</h4>
+
           <img src="https://images.unsplash.com/photo-1556742049-0cfed4f6a45d?auto=format&fit=crop&w=600&q=80"
                class="img-fluid rounded project-img" alt="E-Commerce">
-          <p class="mt-3 text-muted">A complete online store featuring product management, secure checkout, and responsive UI/UX design.</p>
+
+          <p class="mt-3 project-desc">A complete online store featuring product management, secure checkout, and responsive UI/UX design.</p>
 
           <div class="tech-icons mb-3">
-            <i class="bi bi-bootstrap fs-4 me-2"></i>
-            <i class="bi bi-filetype-js fs-4 me-2"></i>
-            <i class="bi bi-database fs-4"></i>
+            <i class="fa-brands fa-html5 fs-4 me-2" title="HTML"></i>
+            <i class="fa-brands fa-css3-alt fs-4 me-2" title="CSS"></i>
+            <i class="fa-brands fa-js fs-4 me-2" title="JavaScript"></i>
+            <i class="fa-brands fa-bootstrap fs-4" title="Bootstrap"></i>
           </div>
 
           <div>
-            <a href="#" class="btn btn-primary btn-sm me-2"><i class="bi bi-code-slash"></i> Source Code</a>
-            <a href="#" class="btn btn-success btn-sm"><i class="bi bi-eye"></i> Live Demo</a>
+            <a href="#" class="btn btn-primary btn-sm me-2"><i class="bi bi-code-slash"></i> Source</a>
+            <a href="#" class="btn btn-success btn-sm"><i class="bi bi-eye"></i> Live</a>
           </div>
         </div>
       </div>
 
       <!-- Project 2 -->
       <div class="col-lg-4 col-md-6 d-flex">
-        <div class="portfolio-item text-center p-3 shadow-sm rounded w-100 h-100">
-          <h4 class="mb-3">Company Portfolio Website</h4>
+        <div class="portfolio-item text-center p-3 shadow-sm rounded w-100">
+          <h4 class="mb-3 text-white">Company Portfolio Website</h4>
+
           <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?auto=format&fit=crop&w=600&q=80"
                class="img-fluid rounded project-img" alt="Company Portfolio">
-          <p class="mt-3 text-muted">A sleek corporate profile showcasing services, achievements, and interactive contact platform.</p>
+
+          <p class="mt-3 project-desc">A corporate profile showcasing services, achievements, and an interactive contact platform.</p>
 
           <div class="tech-icons mb-3">
-            <i class="bi bi-html5 fs-4 me-2"></i>
-            <i class="bi bi-css3 fs-4 me-2"></i>
-            <i class="bi bi-bootstrap fs-4"></i>
+            <i class="fa-brands fa-html5 fs-4 me-2"></i>
+            <i class="fa-brands fa-css3-alt fs-4 me-2"></i>
+            <i class="fa-brands fa-js fs-4"></i>
           </div>
 
           <div>
-            <a href="#" class="btn btn-primary btn-sm me-2"><i class="bi bi-code-slash"></i> Source Code</a>
-            <a href="#" class="btn btn-success btn-sm"><i class="bi bi-eye"></i> Live Demo</a>
+            <a href="#" class="btn btn-primary btn-sm me-2"><i class="bi bi-code-slash"></i> Source</a>
+            <a href="#" class="btn btn-success btn-sm"><i class="bi bi-eye"></i> Live</a>
           </div>
         </div>
       </div>
 
       <!-- Project 3 -->
       <div class="col-lg-4 col-md-6 d-flex">
-        <div class="portfolio-item text-center p-3 shadow-sm rounded w-100 h-100">
-          <h4 class="mb-3">Dashboard Admin Panel</h4>
+        <div class="portfolio-item text-center p-3 shadow-sm rounded w-100">
+          <h4 class="mb-3 text-white">Dashboard Admin Panel</h4>
+
           <img src="https://images.pexels.com/photos/95916/pexels-photo-95916.jpeg"
                class="img-fluid rounded project-img" alt="Dashboard">
-          <p class="mt-3 text-muted">A dynamic management dashboard with analytics, charts, and user control features.</p>
+
+          <p class="mt-3 project-desc">A dynamic management dashboard with analytics, charts, and user control tools.</p>
 
           <div class="tech-icons mb-3">
-            <i class="bi bi-filetype-js fs-4 me-2"></i>
-            <i class="bi bi-bar-chart fs-4 me-2"></i>
-            <i class="bi bi-layout-text-window fs-4"></i>
+            <i class="fa-brands fa-js fs-4 me-2"></i>
+            <i class="fa-solid fa-chart-line fs-4 me-2"></i>
+            <i class="fa-solid fa-table fs-4"></i>
           </div>
 
           <div>
-            <a href="#" class="btn btn-primary btn-sm me-2"><i class="bi bi-code-slash"></i> Source Code</a>
-            <a href="#" class="btn btn-success btn-sm"><i class="bi bi-eye"></i> Live Demo</a>
+            <a href="#" class="btn btn-primary btn-sm me-2"><i class="bi bi-code-slash"></i> Source</a>
+            <a href="#" class="btn btn-success btn-sm"><i class="bi bi-eye"></i> Live</a>
           </div>
         </div>
       </div>
 
       <!-- Project 4 -->
       <div class="col-lg-4 col-md-6 d-flex">
-        <div class="portfolio-item text-center p-3 shadow-sm rounded w-100 h-100">
-          <h4 class="mb-3">Real Estate Listing System</h4>
+        <div class="portfolio-item text-center p-3 shadow-sm rounded w-100">
+          <h4 class="mb-3 text-white">Real Estate Listing System</h4>
+
           <img src="https://images.unsplash.com/photo-1501183638710-841dd1904471?auto=format&fit=crop&w=600&q=80"
                class="img-fluid rounded project-img" alt="Real Estate">
-          <p class="mt-3 text-muted">A platform for exploring properties, filtering results, and viewing property insights.</p>
+
+          <p class="mt-3 project-desc">A system to explore and filter properties with advanced insights.</p>
 
           <div class="tech-icons mb-3">
-            <i class="bi bi-react fs-4 me-2"></i>
-            <i class="bi bi-geo-alt fs-4 me-2"></i>
-            <i class="bi bi-cloud-arrow-down fs-4"></i>
+            <i class="fa-brands fa-react fs-4 me-2"></i>
+            <i class="fa-solid fa-location-dot fs-4 me-2"></i>
+            <i class="fa-solid fa-cloud fs-4"></i>
           </div>
 
           <div>
-            <a href="#" class="btn btn-primary btn-sm me-2"><i class="bi bi-code-slash"></i> Source Code</a>
-            <a href="#" class="btn btn-success btn-sm"><i class="bi bi-eye"></i> Live Demo</a>
+            <a href="#" class="btn btn-primary btn-sm me-2"><i class="bi bi-code-slash"></i> Source</a>
+            <a href="#" class="btn btn-success btn-sm"><i class="bi bi-eye"></i> Live</a>
           </div>
         </div>
       </div>
 
-      <!-- Project 5  -->
+      <!-- Project 5 -->
       <div class="col-lg-4 col-md-6 d-flex">
-        <div class="portfolio-item text-center p-3 shadow-sm rounded w-100 h-100">
-          <h4 class="mb-3">Restaurant Ordering System</h4>
+        <div class="portfolio-item text-center p-3 shadow-sm rounded w-100">
+          <h4 class="mb-3 text-white">Restaurant Ordering System</h4>
+
           <img src="https://images.unsplash.com/photo-1551218808-94e220e084d2?auto=format&fit=crop&w=600&q=80"
                class="img-fluid rounded project-img" alt="Restaurant">
-          <p class="mt-3 text-muted">An online food ordering system with menu browsing and secure payments.</p>
+
+          <p class="mt-3 project-desc">An online food ordering system with menu browsing & secure payments.</p>
 
           <div class="tech-icons mb-3">
-            <i class="bi bi-laravel fs-4 me-2"></i>
-            <i class="bi bi-database fs-4 me-2"></i>
-            <i class="bi bi-cart4 fs-4"></i>
+            <i class="fa-brands fa-laravel fs-4 me-2"></i>
+            <i class="fa-solid fa-database fs-4 me-2"></i>
+            <i class="fa-solid fa-cart-shopping fs-4"></i>
           </div>
 
           <div>
-            <a href="#" class="btn btn-primary btn-sm me-2"><i class="bi bi-code-slash"></i> Source Code</a>
-            <a href="#" class="btn btn-success btn-sm"><i class="bi bi-eye"></i> Live Demo</a>
+            <a href="#" class="btn btn-primary btn-sm me-2"><i class="bi bi-code-slash"></i> Source</a>
+            <a href="#" class="btn btn-success btn-sm"><i class="bi bi-eye"></i> Live</a>
           </div>
         </div>
       </div>
 
-      <!-- Project 6  -->
+      <!-- Project 6 -->
       <div class="col-lg-4 col-md-6 d-flex">
-        <div class="portfolio-item text-center p-3 shadow-sm rounded w-100 h-100">
-          <h4 class="mb-3">AI Chat Assistant</h4>
+        <div class="portfolio-item text-center p-3 shadow-sm rounded w-100">
+          <h4 class="mb-3 text-white">AI Chat Assistant</h4>
+
           <img src="https://images.pexels.com/photos/30530418/pexels-photo-30530418.jpeg"
                class="img-fluid rounded project-img" alt="AI Assistant">
-          <p class="mt-3 text-muted">A smart chatbot powered by AI to answer customer inquiries automatically.</p>
+
+          <p class="mt-3 project-desc">An intelligent AI-powered chatbot for automated customer support.</p>
 
           <div class="tech-icons mb-3">
-            <i class="bi bi-lightning fs-4 me-2"></i>
-            <i class="bi bi-node-plus fs-4 me-2"></i>
-            <i class="bi bi-chat-dots fs-4"></i>
+            <i class="fa-solid fa-brain fs-4 me-2"></i>
+            <i class="fa-brands fa-node-js fs-4 me-2"></i>
+            <i class="fa-solid fa-comments fs-4"></i>
           </div>
 
           <div>
-            <a href="#" class="btn btn-primary btn-sm me-2"><i class="bi bi-code-slash"></i> Source Code</a>
-            <a href="#" class="btn btn-success btn-sm"><i class="bi bi-eye"></i> Live Demo</a>
+            <a href="#" class="btn btn-primary btn-sm me-2"><i class="bi bi-code-slash"></i> Source</a>
+            <a href="#" class="btn btn-success btn-sm"><i class="bi bi-eye"></i> Live</a>
           </div>
         </div>
       </div>
