--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simple-icons-font@latest/font/simple-icons.min.css">
+
+<!-- Font Awesome -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
@@ -381,151 +385,132 @@
     </section>
     <!-- /Resume Section -->
 
-<section id="portfolio" class="portfolio section">
-  <div class="container section-title" data-aos="fade-up">
-    <h2>Portfolio</h2>
-    <p>Here is a selection of my most recent web development work, built with clean structure and optimized performance.</p>
+<section id="portfolio" class="portfolio section" style="background:#111; padding:50px 0;">
+  <div class="container section-title text-center">
+    <h2 style="color:white;">Portfolio</h2>
+    <p style="color:#ccc;">Here is a selection of my most recent web development work.</p>
   </div>
 
-  <div class="container" data-aos="fade-up" data-aos-delay="100">
+  <div class="container">
     <div class="row gy-4">
 
-      <!-- Project Template -->
       <!-- Project 1 -->
       <div class="col-lg-4 col-md-6 d-flex">
-        <div class="portfolio-item text-center p-3 shadow-sm rounded w-100">
-          <h4 class="mb-3 text-white">E-Commerce Platform</h4>
+        <div class="portfolio-item text-center p-3 rounded w-100" style="background:#1a1a1a;">
+          <h4 class="mb-3" style="color:white;">E-Commerce Platform</h4>
 
           <img src="https://images.unsplash.com/photo-1556742049-0cfed4f6a45d?auto=format&fit=crop&w=600&q=80"
-               class="img-fluid rounded project-img" alt="E-Commerce">
+               class="img-fluid rounded" style="height:150px; object-fit:cover; width:100%;">
 
-          <p class="mt-3 project-desc">A complete online store featuring product management, secure checkout, and responsive UI/UX design.</p>
+          <p class="mt-3" style="color:white;">
+            A complete online store featuring product management and secure checkout.
+          </p>
 
-          <div class="tech-icons mb-3">
-            <i class="fa-brands fa-html5 fs-4 me-2" title="HTML"></i>
-            <i class="fa-brands fa-css3-alt fs-4 me-2" title="CSS"></i>
-            <i class="fa-brands fa-js fs-4 me-2" title="JavaScript"></i>
-            <i class="fa-brands fa-bootstrap fs-4" title="Bootstrap"></i>
+          <div class="tech-icons mb-3" style="font-size:32px;">
+            <i class="si si-react" title="React" style="color:#61DBFB;"></i>
+            <i class="si si-nextdotjs" title="Next.js" style="color:white;"></i>
+            <i class="si si-tailwindcss" title="Tailwind CSS" style="color:#38BDF8;"></i>
           </div>
 
-          <div>
-            <a href="#" class="btn btn-primary btn-sm me-2"><i class="bi bi-code-slash"></i> Source</a>
-            <a href="#" class="btn btn-success btn-sm"><i class="bi bi-eye"></i> Live</a>
-          </div>
         </div>
       </div>
 
       <!-- Project 2 -->
       <div class="col-lg-4 col-md-6 d-flex">
-        <div class="portfolio-item text-center p-3 shadow-sm rounded w-100">
-          <h4 class="mb-3 text-white">Company Portfolio Website</h4>
+        <div class="portfolio-item text-center p-3 rounded w-100" style="background:#1a1a1a;">
+          <h4 class="mb-3" style="color:white;">Company Portfolio Website</h4>
 
           <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?auto=format&fit=crop&w=600&q=80"
-               class="img-fluid rounded project-img" alt="Company Portfolio">
+               class="img-fluid rounded" style="height:150px; object-fit:cover; width:100%;">
 
-          <p class="mt-3 project-desc">A corporate profile showcasing services, achievements, and an interactive contact platform.</p>
+          <p class="mt-3" style="color:white;">
+            A corporate profile showcasing services and achievements.
+          </p>
 
-          <div class="tech-icons mb-3">
-            <i class="fa-brands fa-html5 fs-4 me-2"></i>
-            <i class="fa-brands fa-css3-alt fs-4 me-2"></i>
-            <i class="fa-brands fa-js fs-4"></i>
-          </div>
-
-          <div>
-            <a href="#" class="btn btn-primary btn-sm me-2"><i class="bi bi-code-slash"></i> Source</a>
-            <a href="#" class="btn btn-success btn-sm"><i class="bi bi-eye"></i> Live</a>
+          <div class="tech-icons mb-3" style="font-size:32px;">
+            <i class="si si-html5" style="color:#E34F26;"></i>
+            <i class="si si-css3" style="color:#1572B6;"></i>
+            <i class="si si-javascript" style="color:#F7DF1E;"></i>
           </div>
         </div>
       </div>
 
       <!-- Project 3 -->
       <div class="col-lg-4 col-md-6 d-flex">
-        <div class="portfolio-item text-center p-3 shadow-sm rounded w-100">
-          <h4 class="mb-3 text-white">Dashboard Admin Panel</h4>
+        <div class="portfolio-item text-center p-3 rounded w-100" style="background:#1a1a1a;">
+          <h4 class="mb-3" style="color:white;">Dashboard Admin Panel</h4>
 
           <img src="https://images.pexels.com/photos/95916/pexels-photo-95916.jpeg"
-               class="img-fluid rounded project-img" alt="Dashboard">
+               class="img-fluid rounded" style="height:150px; object-fit:cover; width:100%;">
 
-          <p class="mt-3 project-desc">A dynamic management dashboard with analytics, charts, and user control tools.</p>
+          <p class="mt-3" style="color:white;">
+            A dynamic management dashboard with charts and analytics.
+          </p>
 
-          <div class="tech-icons mb-3">
-            <i class="fa-brands fa-js fs-4 me-2"></i>
-            <i class="fa-solid fa-chart-line fs-4 me-2"></i>
-            <i class="fa-solid fa-table fs-4"></i>
-          </div>
-
-          <div>
-            <a href="#" class="btn btn-primary btn-sm me-2"><i class="bi bi-code-slash"></i> Source</a>
-            <a href="#" class="btn btn-success btn-sm"><i class="bi bi-eye"></i> Live</a>
+          <div class="tech-icons mb-3" style="font-size:32px;">
+            <i class="si si-react" style="color:#61DBFB;"></i>
+            <i class="si si-nextdotjs" style="color:white;"></i>
+            <i class="si si-tailwindcss" style="color:#38BDF8;"></i>
           </div>
         </div>
       </div>
 
       <!-- Project 4 -->
       <div class="col-lg-4 col-md-6 d-flex">
-        <div class="portfolio-item text-center p-3 shadow-sm rounded w-100">
-          <h4 class="mb-3 text-white">Real Estate Listing System</h4>
+        <div class="portfolio-item text-center p-3 rounded w-100" style="background:#1a1a1a;">
+          <h4 class="mb-3" style="color:white;">Real Estate Listing System</h4>
 
           <img src="https://images.unsplash.com/photo-1501183638710-841dd1904471?auto=format&fit=crop&w=600&q=80"
-               class="img-fluid rounded project-img" alt="Real Estate">
+               class="img-fluid rounded" style="height:150px; object-fit:cover; width:100%;">
 
-          <p class="mt-3 project-desc">A system to explore and filter properties with advanced insights.</p>
+          <p class="mt-3" style="color:white;">
+            A platform for exploring properties and filtering results.
+          </p>
 
-          <div class="tech-icons mb-3">
-            <i class="fa-brands fa-react fs-4 me-2"></i>
-            <i class="fa-solid fa-location-dot fs-4 me-2"></i>
-            <i class="fa-solid fa-cloud fs-4"></i>
-          </div>
-
-          <div>
-            <a href="#" class="btn btn-primary btn-sm me-2"><i class="bi bi-code-slash"></i> Source</a>
-            <a href="#" class="btn btn-success btn-sm"><i class="bi bi-eye"></i> Live</a>
+          <div class="tech-icons mb-3" style="font-size:32px;">
+            <i class="si si-react" style="color:#61DBFB;"></i>
+            <i class="si si-nextdotjs" style="color:white;"></i>
+            <i class="si si-tailwindcss" style="color:#38BDF8;"></i>
           </div>
         </div>
       </div>
 
       <!-- Project 5 -->
       <div class="col-lg-4 col-md-6 d-flex">
-        <div class="portfolio-item text-center p-3 shadow-sm rounded w-100">
-          <h4 class="mb-3 text-white">Restaurant Ordering System</h4>
+        <div class="portfolio-item text-center p-3 rounded w-100" style="background:#1a1a1a;">
+          <h4 class="mb-3" style="color:white;">Restaurant Ordering System</h4>
 
           <img src="https://images.unsplash.com/photo-1551218808-94e220e084d2?auto=format&fit=crop&w=600&q=80"
-               class="img-fluid rounded project-img" alt="Restaurant">
+               class="img-fluid rounded" style="height:150px; object-fit:cover; width:100%;">
 
-          <p class="mt-3 project-desc">An online food ordering system with menu browsing & secure payments.</p>
+          <p class="mt-3" style="color:white;">
+            An online food ordering system with menu browsing and payments.
+          </p>
 
-          <div class="tech-icons mb-3">
-            <i class="fa-brands fa-laravel fs-4 me-2"></i>
-            <i class="fa-solid fa-database fs-4 me-2"></i>
-            <i class="fa-solid fa-cart-shopping fs-4"></i>
-          </div>
-
-          <div>
-            <a href="#" class="btn btn-primary btn-sm me-2"><i class="bi bi-code-slash"></i> Source</a>
-            <a href="#" class="btn btn-success btn-sm"><i class="bi bi-eye"></i> Live</a>
+          <div class="tech-icons mb-3" style="font-size:32px;">
+            <i class="si si-html5" style="color:#E34F26;"></i>
+            <i class="si si-css3" style="color:#1572B6;"></i>
+            <i class="si si-javascript" style="color:#F7DF1E;"></i>
           </div>
         </div>
       </div>
 
       <!-- Project 6 -->
       <div class="col-lg-4 col-md-6 d-flex">
-        <div class="portfolio-item text-center p-3 shadow-sm rounded w-100">
-          <h4 class="mb-3 text-white">AI Chat Assistant</h4>
+        <div class="portfolio-item text-center p-3 rounded w-100" style="background:#1a1a1a;">
+          <h4 class="mb-3" style="color:white;">AI Chat Assistant</h4>
 
           <img src="https://images.pexels.com/photos/30530418/pexels-photo-30530418.jpeg"
-               class="img-fluid rounded project-img" alt="AI Assistant">
+               class="img-fluid rounded" style="height:150px; object-fit:cover; width:100%;">
 
-          <p class="mt-3 project-desc">An intelligent AI-powered chatbot for automated customer support.</p>
+          <p class="mt-3" style="color:white;">
+            A smart chatbot powered by AI to answer customer inquiries automatically.
+          </p>
 
-          <div class="tech-icons mb-3">
-            <i class="fa-solid fa-brain fs-4 me-2"></i>
-            <i class="fa-brands fa-node-js fs-4 me-2"></i>
-            <i class="fa-solid fa-comments fs-4"></i>
-          </div>
-
-          <div>
-            <a href="#" class="btn btn-primary btn-sm me-2"><i class="bi bi-code-slash"></i> Source</a>
-            <a href="#" class="btn btn-success btn-sm"><i class="bi bi-eye"></i> Live</a>
+          <div class="tech-icons mb-3" style="font-size:32px;">
+            <i class="si si-react" style="color:#61DBFB;"></i>
+            <i class="si si-nextdotjs" style="color:white;"></i>
+            <i class="si si-tailwindcss" style="color:#38BDF8;"></i>
           </div>
         </div>
       </div>
