--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
     </section>
     <!-- /Resume Section -->
 
-<section id="portfolio" class="portfolio section" style="background:#111; padding:50px 0;">
+<section id="portfolio" class="portfolio section" style="padding:50px 0;">
   <div class="container section-title text-center">
     <h2 style="color:white;">Portfolio</h2>
     <p style="color:#ccc;">Here is a selection of my most recent web development work.</p>
