--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
 
       <!-- Project 1 -->
       <div class="col-lg-4 col-md-6 d-flex">
-        <div class="portfolio-item text-center p-3 rounded w-100" style="background:#1a1a1a;">
+        <div class="portfolio-item text-center p-3 rounded w-100">
           <h4 class="mb-3" style="color:white;">E-Commerce Platform</h4>
 
           <img src="https://images.unsplash.com/photo-1556742049-0cfed4f6a45d?auto=format&fit=crop&w=600&q=80"
@@ -417,7 +417,7 @@
 
       <!-- Project 2 -->
       <div class="col-lg-4 col-md-6 d-flex">
-        <div class="portfolio-item text-center p-3 rounded w-100" style="background:#1a1a1a;">
+        <div class="portfolio-item text-center p-3 rounded w-100">
           <h4 class="mb-3" style="color:white;">Company Portfolio Website</h4>
 
           <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?auto=format&fit=crop&w=600&q=80"
@@ -437,7 +437,7 @@
 
       <!-- Project 3 -->
       <div class="col-lg-4 col-md-6 d-flex">
-        <div class="portfolio-item text-center p-3 rounded w-100" style="background:#1a1a1a;">
+        <div class="portfolio-item text-center p-3 rounded w-100" >
           <h4 class="mb-3" style="color:white;">Dashboard Admin Panel</h4>
 
           <img src="https://images.pexels.com/photos/95916/pexels-photo-95916.jpeg"
@@ -457,7 +457,7 @@
 
       <!-- Project 4 -->
       <div class="col-lg-4 col-md-6 d-flex">
-        <div class="portfolio-item text-center p-3 rounded w-100" style="background:#1a1a1a;">
+        <div class="portfolio-item text-center p-3 rounded w-100" >
           <h4 class="mb-3" style="color:white;">Real Estate Listing System</h4>
 
           <img src="https://images.unsplash.com/photo-1501183638710-841dd1904471?auto=format&fit=crop&w=600&q=80"
@@ -477,7 +477,7 @@
 
       <!-- Project 5 -->
       <div class="col-lg-4 col-md-6 d-flex">
-        <div class="portfolio-item text-center p-3 rounded w-100" style="background:#1a1a1a;">
+        <div class="portfolio-item text-center p-3 rounded w-100" >
           <h4 class="mb-3" style="color:white;">Restaurant Ordering System</h4>
 
           <img src="https://images.unsplash.com/photo-1551218808-94e220e084d2?auto=format&fit=crop&w=600&q=80"
@@ -497,7 +497,7 @@
 
       <!-- Project 6 -->
       <div class="col-lg-4 col-md-6 d-flex">
-        <div class="portfolio-item text-center p-3 rounded w-100" style="background:#1a1a1a;">
+        <div class="portfolio-item text-center p-3 rounded w-100" >
           <h4 class="mb-3" style="color:white;">AI Chat Assistant</h4>
 
           <img src="https://images.pexels.com/photos/30530418/pexels-photo-30530418.jpeg"
