move to hero section on open the site

--- a/index.html
+++ b/index.html
@@ -781,6 +781,15 @@
   </script>
 
   <script data-goatcounter="https://sahiralzakaria.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
+  <script>
+    window.addEventListener("load", () => {
+      const heroSection = document.getElementById("hero");
+      if (heroSection) {
+        heroSection.scrollIntoView({ behavior: "smooth" });
+      }
+    });
+  </script>
+
 </body>
 
 </html>
