add more of responsive

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                   Next.js, and TailwindCSS.
                 </p>
                 <!-- Arabic Intro Section -->
-                <p class="description" dir="rtl" style="text-align: right;">
+                <p class="description" dir="rtl">
                   ساهر زكريا — مطوّر واجهات أمامية أحوّل الأفكار إلى مواقع وتطبيقات ويب حديثة وسريعة باستخدام React.js
                   وNext.js وTailwind CSS.
                 </p>
